--- a/openstack-dashboard/dashboard/templates/dash_floating_ips_associate.html
+++ b/openstack-dashboard/dashboard/templates/dash_floating_ips_associate.html
@@ -21,5 +21,6 @@
       <h3>Description:</h3>
       <p>Associate a floating ip with an instance.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
