--- a/openstack-dashboard/dashboard/templates/_syspanel_floating_ips_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_floating_ips_list.html
@@ -3,7 +3,6 @@
     <th>ID</th>
     <th>IP</th>
     <th>Tenant</th>
-    <th>Fixed IP</th>
     <th>Instance</th>
   </tr>
   {% for ip in floating_ips %}
@@ -11,8 +10,17 @@
     <td>{{ip.id}}</td>
     <td>{{ip.ip}}</td>
     <td>{{ip.fixed_ip.instance.project_id|default:'None'}}</td>
-    <td>{{ip.fixed_ip.address|default:'None'}} {% if ip.fixed_ip.instance.id %}<span class="small">( ID: {{ip.fixed_ip.instance.id}} )</span>{% endif %}</td>
-    <td>{{ip.fixed_ip.instance.display_name|default:'None'}}</td>
+    <td>
+      {% if ip.fixed_ip.instance.id %}
+        <ul>
+          <li><span>ID:</span> {{ip.fixed_ip.instance.id}}</li>
+          <li><span>IP:</span> {{ip.fixed_ip.address}}</li>
+          <li><span>Name:</span> {{ip.fixed_ip.instance.display_name}}</li>
+        </ul>
+      {% else %}
+        None
+      {% endif %}
+    </td>
   </tr>
   {% endfor %}
 </table>
