starting to make things modular

--- a/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
@@ -10,4 +10,5 @@
     <li><a {% if current_sidebar == "users" %} class="active" {% endif %} href="{% url syspanel_users %}">Users</a></li>
     <li><a {% if current_sidebar == "quotas" %} class="active" {% endif %} href="{% url syspanel_quotas %}">Quotas</a></li>
   </ul>
+  {% block syspanel_sidebar %}{% endblock %}
 </div>
