sidebars now only display in their given type area

--- a/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_sidebar.html
@@ -13,6 +13,6 @@
     <li><a {% if current_sidebar == "quotas" %} class="active" {% endif %} href="{% url syspanel_quotas %}">Quotas</a></li>
   </ul>
   
-  {% initiate_module_sidebar %}
+  {% syspanel_sidebar_modules %}
 
 </div>
