--- a/openstack-dashboard/dashboard/templates/_sidebar_module.html
+++ b/openstack-dashboard/dashboard/templates/_sidebar_module.html
@@ -3,7 +3,7 @@
   
   <ul class="sub_nav">
     {% for link in module.links %}
-      <li><a {% if request.view == link.active_text %} class="active" {% endif %} href="{{link.url}}">{{link.text}}</a></li>
+      <li><a {% if request.get_full_path == link.url %} class="active" {% endif %} href="{{link.url}}">{{link.text}}</a></li>
     {% endfor %}
   </ul>
 {% endfor %}
