--- a/openstack-dashboard/dashboard/templates/syspanel_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_usage.html
@@ -62,10 +62,9 @@
           <span><strong>This month's GB-Hours:</strong> {{global_summary.total_disk_usage|floatformat|default:'-'}}</span>
         </p>
   </div>
-
-
     {% if usage_list %}
       <div class='table_title wide'>
+        <a class="csv_download_link" href="{{csv_link}}">Download CSV &raquo;</a>
         <h3>Server Usage Summary</h3>
       </div>
 
