--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -42,6 +42,7 @@
    </div>
 
     <div class='table_title wide'>
+      <a class="csv_download_link" href="{{csv_link}}">Download CSV &raquo;</a>
       <h3>Server Usage Summary
         <small>
           {% if show_terminated %}
