--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -30,12 +30,20 @@
           </td>
           <td class="ip_list">
             {% for ip_group, addresses in instance.addresses.items %}
+              {% if instance.addresses.items|length > 1 %}
               <h4>{{ip_group}}</h4>
               <ul>
                 {% for address in addresses %}
                   <li>{{address.addr}}</li>
                 {% endfor %}
               </ul>
+              {% else %}
+              <ul>
+                {% for address in addresses %}
+                  <li>{{address.addr}}</li>
+                {% endfor %}
+              </ul>
+              {% endif %}
             {% endfor %}
           </td>
           <td>{{instance.status|lower|capfirst}}</td>
