--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
@@ -20,6 +20,7 @@
       <h3>Description:</h3>
       <p>From here you can edit quotas (max limits) for the tenant {{tenant_id}}.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
 
