--- a/openstack-dashboard/media/dashboard/css/style.css
+++ b/openstack-dashboard/media/dashboard/css/style.css
@@ -186,6 +186,7 @@ h1 a{
   height: 29px;
   float: right;
   border: 1px solid #d6e4d9;
+  text-indent: -9999px;
 }
 #drop_btn:hover { background-color: #bfdec6; }
 
