clearing .dash_block for style

--- a/openstack-dashboard/dashboard/templates/dash_instance_update.html
+++ b/openstack-dashboard/dashboard/templates/dash_instance_update.html
@@ -22,6 +22,7 @@
       <h3>Description:</h3>
       <p>Update the name and description of your instance</p>
     </div>
+    <div class="clear"></div>
   </div>
 {% endblock %}
 
