--- a/openstack-dashboard/dashboard/templates/_dash_sidebar.html
+++ b/openstack-dashboard/dashboard/templates/_dash_sidebar.html
@@ -6,7 +6,9 @@
     <li><a {% if current_sidebar == "images" %} class="active" {% endif %} href="{% url dash_images request.user.tenant %}">Images</a></li>
     <li><a {% if current_sidebar == "snapshots" %} class="active" {% endif %} href="{% url dash_snapshots request.user.tenant %}">Snapshots</a></li>
     <li><a {% if current_sidebar == "keypairs" %} class="active" {% endif %} href="{% url dash_keypairs request.user.tenant %}">Keypairs</a></li>
+    {% if quantum_configured %}
     <li><a {% if current_sidebar == "networks" %} class="active" {% endif %} href="{% url dash_networks request.user.tenant %}">Networks</a></li>
+    {% endif %}
   </ul>
   {% if swift_configured %}
   <h3>Manage Object Store</h3>
