Fix issue #838054: Search form submit causes Forbidden (403) page

--- a/openstack-dashboard/dashboard/templates/_page_header.html
+++ b/openstack-dashboard/dashboard/templates/_page_header.html
@@ -6,7 +6,7 @@
     {% if searchable %}
       <div class="right">
         <div class='search'>
-          <form action='' method='post'>
+          <form action='' method='post' onsubmit='return false;'>
             <fieldset>
               <label for='table_search'>Search</label>
               <input id='table_search' name='search' type='text' value='' />
