finally fixed the annoying over-sized error box on login splash page

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -850,7 +850,8 @@ input:focus, textarea:focus {
   margin: 0 0 0 0;
 }
 
-#standalone #login_wrapper .status_box {
+#standalone #login_wrapper .message_box {
+  min-width: 335px;
   width: 335px;
   margin: 0 0 25px 0;
 }
