Fixed issue 858649 on Launchpad -- Distinguishes between tenant name and tenant id.
The recent changes to keystone switched from sending the tenant id to sending the tenant name as "tenant", thus breaking various tenant-related calls. This patch differentiates the two and names them as separate attributes on request.user. It also switches to using novaclient for the api.tenant_quota_get function.

--- a/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/floating_ips/_list.html
@@ -26,7 +26,7 @@
         {% if ip.fixed_ip %}
         <li class="form">{% include "django_openstack/dash/floating_ips/_disassociate.html" with form=disassociate_form %}</li>
         {% else %}
-          <li class="form"><a href="{% url dash_floating_ips_associate request.user.tenant ip.id %}">Associate to instance</a></li>
+          <li class="form"><a href="{% url dash_floating_ips_associate request.user.tenant_id ip.id %}">Associate to instance</a></li>
         {% endif %}
       </ul>
     </td>
