--- a/django-openstack/django_openstack/templates/django_openstack/dash/containers/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/containers/_list.html
@@ -9,8 +9,8 @@
     <td id="actions">
       <ul>
         <li class="form">{% include "django_openstack/dash/containers/_delete.html" with form=delete_form %}</li>
-        <li><a href="{% url dash_objects request.user.tenant container.name %}">List Objects</a></li>
-        <li><a href="{% url dash_objects_upload request.user.tenant container.name %}">Upload Object</a></li>
+        <li><a href="{% url dash_objects request.user.tenant_id container.name %}">List Objects</a></li>
+        <li><a href="{% url dash_objects_upload request.user.tenant_id container.name %}">Upload Object</a></li>
       </ul>
     </td>
   </tr>
