--- a/django-openstack/django_openstack/templates/django_openstack/dash/containers/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/containers/index.html
@@ -7,12 +7,12 @@
 {% endblock %}
 
 {% block page_header %}
-  {% url dash_images request.user.tenant as refresh_link %}
+  {% url dash_images request.user.tenant_id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
   {% include "django_openstack/common/_page_header.html" with title="Containers" refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block dash_main %}
   {% include 'django_openstack/dash/containers/_list.html' %}
-  <a class="action_link large-rounded" href="{% url dash_containers_create request.user.tenant %}">Create New Container &gt;&gt;</a>
+  <a class="action_link large-rounded" href="{% url dash_containers_create request.user.tenant_id %}">Create New Container &gt;&gt;</a>
 {% endblock %}
