--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/_list.html
@@ -59,10 +59,10 @@
             <ul>
               <li class="form">{% include "django_openstack/common/instances/_terminate.html" with form=terminate_form %}</li>
               <li class="form">{% include "django_openstack/common/instances/_reboot.html" with form=reboot_form %}</li>
-              <li><a target="_blank" href="{% url dash_instances_console request.user.tenant instance.id %}">Log</a></li>
-              <li><a target="_blank" href="{% url dash_instances_vnc request.user.tenant instance.id %}">VNC Console</a></li>
-              <li><a href="{% url dash_instances_update request.user.tenant instance.id %}">Edit</a></li>
-              <li><a href="{% url dash_snapshots_create request.user.tenant instance.id %}">Snapshot</a></li>
+              <li><a target="_blank" href="{% url dash_instances_console request.user.tenant_id instance.id %}">Log</a></li>
+              <li><a target="_blank" href="{% url dash_instances_vnc request.user.tenant_id instance.id %}">VNC Console</a></li>
+              <li><a href="{% url dash_instances_update request.user.tenant_id instance.id %}">Edit</a></li>
+              <li><a href="{% url dash_snapshots_create request.user.tenant_id instance.id %}">Snapshot</a></li>
             </ul>
         </td>
       </tr>
