--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/update.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/update.html
@@ -15,7 +15,7 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/instances/_form.html' with form=form %}
-      <h3><a href="{% url dash_instances request.user.tenant %}"><< Return to Instances List</a></h3>
+      <h3><a href="{% url dash_instances request.user.tenant_id %}"><< Return to Instances List</a></h3>
     </div>
 
     <div class="right">
@@ -32,7 +32,7 @@
       $("#spinner").hide()
       function loadInstances(){
         $('#spinner').show();
-        $('#instances').load('{% url dash_instances_refresh request.user.tenant %}', function(){
+        $('#instances').load('{% url dash_instances_refresh request.user.tenant_id %}', function(){
           $("#spinner").hide()
         });
       }
