--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/usage.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/usage.html
@@ -93,7 +93,7 @@
   {% else %}
       <div class="message_box info">
         <h2>Info</h2>
-        <p>There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{% url dash_images request.user.tenant %}'>Images Page.</a></p>
+        <p>There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{% url dash_images request.user.tenant_id %}'>Images Page.</a></p>
       </div>
   {% endif %}
 
