--- a/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/keypairs/create.html
@@ -28,7 +28,7 @@
     <div class="left">
       <h3>Your private key is being downloaded.</h3>
       {% include 'django_openstack/dash/keypairs/_form.html' with form=create_form %}
-      <h3><a href="{% url dash_keypairs request.user.tenant %}"><< Return to keypairs list</a></h3>
+      <h3><a href="{% url dash_keypairs request.user.tenant_id %}"><< Return to keypairs list</a></h3>
     </div>
 
     <div class="right">
