--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/create.html
@@ -15,7 +15,7 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/networks/_form.html' with form=network_form %}
-      <h3><a href="{% url dash_networks request.user.tenant %}"><< Return to networks list</a></h3>
+      <h3><a href="{% url dash_networks request.user.tenant_id %}"><< Return to networks list</a></h3>
     </div>
 
     <div class="right">
