--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/detail.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% url dash_networks_detail request.user.tenant network.id as refresh_link %}
+  {% url dash_networks_detail request.user.tenant_id network.id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
   {% include "django_openstack/common/_page_header.html" with title=network.name refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
@@ -20,11 +20,11 @@
 {% block dash_main %}
   {% if network.ports %}
     {% include 'django_openstack/dash/networks/_detail.html' %}
-    <a id="network_create_link" class="action_link large-rounded" href="{% url dash_ports_create request.user.tenant network.id %}">Create Ports</a>
+    <a id="network_create_link" class="action_link large-rounded" href="{% url dash_ports_create request.user.tenant_id network.id %}">Create Ports</a>
   {% else %}
     <div class="message_box info">
      <h2>Info</h2>
-     <p>There are currently no ports in this network. <a href="{% url dash_ports_create request.user.tenant network.id %}">Create Ports &gt;&gt;</a></p>
+     <p>There are currently no ports in this network. <a href="{% url dash_ports_create request.user.tenant_id network.id %}">Create Ports &gt;&gt;</a></p>
     </div>
   {% endif %}
 {% endblock %}
