--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% url dash_networks request.user.tenant as refresh_link %}
+  {% url dash_networks request.user.tenant_id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
   {% include "django_openstack/common/_page_header.html" with title="Networks" refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
@@ -15,11 +15,11 @@
 {% block dash_main %}
   {% if networks %}
     {% include 'django_openstack/dash/networks/_list.html' %}
-    <a id="network_create_link" class="action_link large-rounded" href="{% url dash_network_create request.user.tenant %}">Create New Network</a>
+    <a id="network_create_link" class="action_link large-rounded" href="{% url dash_network_create request.user.tenant_id %}">Create New Network</a>
   {% else %}
     <div class="message_box info">
       <h2>Info</h2>
-      <p>There are currently no networks. <a href='{% url dash_network_create request.user.tenant %}'>Create A Network &gt;&gt;</a></p>
+      <p>There are currently no networks. <a href='{% url dash_network_create request.user.tenant_id %}'>Create A Network &gt;&gt;</a></p>
     </div>
   {% endif %}
   </div>
