--- a/django-openstack/django_openstack/templates/django_openstack/dash/networks/rename.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/networks/rename.html
@@ -23,7 +23,7 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/networks/_rename_form.html' with form=rename_form %}
-      <h3><a href="{% url dash_networks request.user.tenant %}"><< Return to networks list</a></h3>
+      <h3><a href="{% url dash_networks request.user.tenant_id %}"><< Return to networks list</a></h3>
     </div>
 
     <div class="right">
