--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/_list.html
@@ -8,9 +8,9 @@
     <td>{{ object.name }}</td>
     <td id="actions">
       <ul>
-        <li><a href="{% url dash_object_copy request.user.tenant container_name object.name %}">Copy</a></li>
+        <li><a href="{% url dash_object_copy request.user.tenant_id container_name object.name %}">Copy</a></li>
         <li class="form">{% include "django_openstack/dash/objects/_delete.html" with form=delete_form %}</li>
-        <li><a href="{% url dash_objects_download request.user.tenant container_name object.name %}">Download</a>
+        <li><a href="{% url dash_objects_download request.user.tenant_id container_name object.name %}">Download</a>
       </ul>
     </td>
   </tr>
