--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/copy.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/copy.html
@@ -17,7 +17,7 @@
     <div class="left">
       <h3>Copy Object: '{{object_name}}'</h3>
       {% include 'django_openstack/dash/objects/_copy.html' with form=copy_form greeting="HI" %}
-      <h3><a href="{% url dash_objects request.user.tenant container_name %}">&lt;&lt; Return to objects list</a></h3>
+      <h3><a href="{% url dash_objects request.user.tenant_id container_name %}">&lt;&lt; Return to objects list</a></h3>
     </div>
 
     <div class="right">
