--- a/django-openstack/django_openstack/templates/django_openstack/dash/objects/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/objects/index.html
@@ -13,7 +13,7 @@
       <div class='search'>
         {% include 'django_openstack/dash/objects/_filter.html' with form=filter_form %}
       </div>
-      <a class="refresh" title="Refresh" href="{% url dash_objects request.user.tenant container_name %}">Refresh List</a>
+      <a class="refresh" title="Refresh" href="{% url dash_objects request.user.tenant_id container_name %}">Refresh List</a>
     </div>
   </div>
 {% endblock %}
@@ -26,9 +26,9 @@
   {% else %}
     <div class="message_box info">
       <h2>Info</h2>
-      <p>There are currently no objects in the container {{container_name}}.  You can upload a new object from the <a href='{% url dash_objects_upload request.user.tenant container_name %}'>Object Upload Page &gt;&gt;</a></p>
+      <p>There are currently no objects in the container {{container_name}}.  You can upload a new object from the <a href='{% url dash_objects_upload request.user.tenant_id container_name %}'>Object Upload Page &gt;&gt;</a></p>
     </div>
   {% endif %}
-  <a class="action_link large-rounded" href="{% url dash_objects_upload request.user.tenant container_name %}">Upload New Object &gt;&gt;</a>
+  <a class="action_link large-rounded" href="{% url dash_objects_upload request.user.tenant_id container_name %}">Upload New Object &gt;&gt;</a>
 
 {% endblock %}
