--- a/django-openstack/django_openstack/templates/django_openstack/dash/ports/attach.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/ports/attach.html
@@ -34,7 +34,7 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/ports/_attach.html' with form=attach_form %}
-      <h3><a href="{% url dash_networks_detail request.user.tenant network %}"><< Return to network detail</a></h3>
+      <h3><a href="{% url dash_networks_detail request.user.tenant_id network %}"><< Return to network detail</a></h3>
     </div>
 
     <div class="right">
