--- a/django-openstack/django_openstack/templates/django_openstack/dash/ports/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/ports/create.html
@@ -15,7 +15,7 @@
   <div class="dash_block">
     <div class="left">
       {% include 'django_openstack/dash/ports/_create.html' with form=create_form %}
-      <h3><a href="{% url dash_networks_detail request.user.tenant network_id %}"><< Return to network detail</a></h3>
+      <h3><a href="{% url dash_networks_detail request.user.tenant_id network_id %}"><< Return to network detail</a></h3>
     </div>
 
     <div class="right">
