--- a/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/_list.html
@@ -12,7 +12,7 @@
     <td>{{ security_group.description }}</td>
     <td id="actions">
       <ul>
-        <li><a href="{% url dash_security_groups_edit_rules request.user.tenant security_group.id %}">Edit Rules</a></li>
+        <li><a href="{% url dash_security_groups_edit_rules request.user.tenant_id security_group.id %}">Edit Rules</a></li>
         {% if security_group.name != 'default' %}
           <li class="form">{% include "django_openstack/dash/security_groups/_delete.html" with form=delete_form %}</li>
         {% endif %}
