--- a/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/security_groups/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% url dash_security_groups request.user.tenant as refresh_link %}
+  {% url dash_security_groups request.user.tenant_id as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
   {% include "django_openstack/common/_page_header.html" with title="Security Groups" refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
@@ -15,11 +15,11 @@
 {% block dash_main %}
   {% if security_groups %}
     {% include 'django_openstack/dash/security_groups/_list.html' %}
-    <a id="security_groups_create_link" class="action_link large-rounded" href="{% url dash_security_groups_create request.user.tenant %}">Create Security Group</a>
+    <a id="security_groups_create_link" class="action_link large-rounded" href="{% url dash_security_groups_create request.user.tenant_id %}">Create Security Group</a>
   {% else %}
     <div class="message_box info">
       <h2>Info</h2>
-      <p>There are currently no security groups. <a href='{% url dash_security_groups_create request.user.tenant %}'>Create A Security Group &gt;&gt;</a></p>
+      <p>There are currently no security groups. <a href='{% url dash_security_groups_create request.user.tenant_id %}'>Create A Security Group &gt;&gt;</a></p>
     </div>
   {% endif %}
 {% endblock %}
