--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/_list.html
@@ -44,8 +44,8 @@
         <ul>
           <li class="form">{% include "django_openstack/common/instances/_terminate.html" with form=terminate_form %}</li>
           <li class="form">{% include "django_openstack/common/instances/_reboot.html" with form=reboot_form %}</li>
-          <li><a target="_blank" href="{% url dash_instances_console request.user.tenant instance.id %}">Console Log</a></li>
-          <li><a target="_blank" href="{% url dash_instances_vnc request.user.tenant instance.id %}">VNC Console</a></li>
+          <li><a target="_blank" href="{% url dash_instances_console request.user.tenant_id instance.id %}">Console Log</a></li>
+          <li><a target="_blank" href="{% url dash_instances_vnc request.user.tenant_id instance.id %}">VNC Console</a></li>
         </ul>
       </td>
     </tr>
